Refactor CSS styles and update navigation links
- Removed padding-top from body element in style.css
- Updated navbar class in index.html to remove fixed-top class
- Updated navigation links in index.html to include anchor tags for smooth scrolling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <nav class="navbar navbar-expand-lg bg-white fixed-top">
+          <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
               <a class="navbar-brand fw-bold fs-3" href="#"><b>CSMARKET</b></a>
               <button
@@ -49,10 +49,12 @@
                     href="#"
                     >Home</a
                   >
-                  <a class="nav-link fw-bolder fs-5" href="#">Services</a>
-                  <a class="nav-link fw-bolder fs-5" href="#">News</a>
-                  <a class="nav-link fw-bolder fs-5" href="#">Support</a>
-                  <a class="nav-link fw-bolder fs-5" href="#">Menu</a>
+                  <a class="nav-link fw-bolder fs-5" href="#services"
+                    >Services</a
+                  >
+                  <a class="nav-link fw-bolder fs-5" href="#news">News</a>
+                  <a class="nav-link fw-bolder fs-5" href="#support">Support</a>
+                  <a class="nav-link fw-bolder fs-5" href="#menu">Menu</a>
                 </div>
                 <div>
                   <a class="btn btn-dark" href="#">Sign Up</a>
@@ -70,7 +72,7 @@
           <div class="row">
             <div class="col-lg-6">
               <h1 class="display-4 fw-bold mb-4">TRADE NOW</h1>
-              <p class="lead p-4 rounded-4">
+              <p class="lead py-4 text-shadow rounded-4 text-white">
                 Step into a Counter-Strike World where limited-edition
                 collectibles and valuable in-game items hold both prestige and
                 real-world value. Welcome to become a successful entrepreneur, a
@@ -117,7 +119,7 @@
                   />
                 </div>
                 <div class="d-flex">
-                  <a href="#" class="btn btn-dark d-block px-4">
+                  <a href="#services" class="btn btn-dark d-block px-4">
                     <i class="fa-solid fa-arrow-down"></i>
                   </a>
                 </div>
@@ -128,7 +130,7 @@
       </div>
     </div>
 
-    <div class="container my-5">
+    <div class="container my-5" id="services">
       <div class="row">
         <div class="col-12">
           <!-- Services Header -->
@@ -251,15 +253,15 @@
           <!-- Action Buttons -->
           <div class="d-flex align-items-center justify-content-between">
             <a href="#" class="btn btn-dark px-5 py-2">Start Mission</a>
-            <button href="#" class="btn btn-dark px-4 py-2">
+            <a href="#support" class="btn btn-dark px-4 py-2">
               <i class="fa-solid fa-arrow-down"></i>
-            </button>
+            </a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5" id="support">
       <div class="row align-items-center g-4">
         <!-- Description Column -->
         <div class="col-lg-6">
@@ -427,7 +429,7 @@
     </div>
 
     <!-- Newsletter Section -->
-    <div class="container my-5 text-center">
+    <div class="container my-5 text-center" id="news">
       <h2 class="mb-3">Subscribe to Our Newsletter for Event Items</h2>
       <p class="text-secondary mb-4">
         Be the first to discover trends, inspirations, and special offers as we
@@ -532,7 +534,7 @@
             <h5>Our Services</h5>
             <ul class="list-unstyled text-secondary">
               <li>info@csmarket.com</li>
-              <li>Designed NguyenLam 2101040108 VietNam</li>
+              <li>Designed by NguyenLam 2101040108 VietNam</li>
             </ul>
           </div>
         </div>
